--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,96 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+  {% include head.html %}
 
 <body>
-  
-  {{ content }}
-  
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-8">
+
+                <!-- the actual blog post: title/author/date/content -->
+                <h1>{{ page.title }}</h1>
+                <p class="lead">by <a href="#s"> {{ page.author }}</a>
+                </p>
+                <hr>
+                <p>
+                <span class="glyphicon glyphicon-time"></span> Posted on {{ page.date | date_to_rfc822 }}</p>
+                <hr>
+                {% if page.image %}
+                <img src="{{ page.image }}" class="img-responsive">
+                <hr>
+                {% endif %}
+                
+                {% if page.summary %}
+                <p class="lead">{{ page.summary }}</p>
+                {% endif %}
+                
+                {{ content }}
+
+                <hr>
+
+                <!-- the comment box -->
+                <div class="well">
+                    <h4>Leave a Comment:</h4>
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+
+            </div>
+
+            <div class="col-lg-4">
+                <!-- /well -->
+                <div class="well">
+                    <h4>Popular Blog Categories</h4>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#dinosaurs">Dinosaurs</a>
+                                </li>
+                                <li><a href="#spaceships">Spaceships</a>
+                                </li>
+                                <li><a href="#fried-foods">Fried Foods</a>
+                                </li>
+                                <li><a href="#wild-animals">Wild Animals</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled">
+                                <li><a href="#alien-abductions">Alien Abductions</a>
+                                </li>
+                                <li><a href="#business-casual">Business Casual</a>
+                                </li>
+                                <li><a href="#robots">Robots</a>
+                                </li>
+                                <li><a href="#fireworks">Fireworks</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- /well -->
+                <div class="well">
+                    <h4>Side Widget Well</h4>
+                    <p>Bootstrap's default wells work great for side widgets! What is a widget anyways...?</p>
+                </div>
+                <!-- /well -->
+            </div>
+        </div>
+
+        <hr>
+
+    </div>
+    <!-- /.container -->
+
+    {% include footer.html %}
+
 </body>
 
 </html>
