fixed relative pathing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,14 +7,14 @@
     <title>{{ page.title }}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/stylish-portfolio.css" rel="stylesheet">
+    <link href="{{ site.url }}/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     
-    <link href="css/syntax-highlighter.css" rel="stylesheet">
+    <link href="{{ site.url }}/css/syntax-highlighter.css" rel="stylesheet">
     
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="{{ site.url }}/js/jquery-1.10.2.js"></script>
+    <script src="{{ site.url }}/js/bootstrap.js"></script>
 </head>
