cleaned up includes

--- a/_includes/callout.html
+++ b/_includes/callout.html
@@ -1,5 +1,5 @@
     <div class="callout">
         <div class="vert-text">
-            <h1>A Dramatic Text Area</h1>
+            <h1>WebLab Bootcamp</h1>
         </div>
     </div>
