--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,12 @@
-    <footer>
+    <footer class="{{ include.class }}">
         <div class="container">
+            <div class="row">
+              <h4>Other Links</h4>
+              <ul>
+                <li><a href="/categories.html">Categories</a></li>
+                <li><a href="/tags.html">Tags</a></li>
+              </ul>
+            </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <ul class="list-inline">
