modified layouts, added discus commenting to posts

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,9 @@
 <body>
 
     {% include side_menu.html %}
-    {% include main_nav.html %}
+    
+    {% include callout.html %}
+    {% include main_nav.html extended="true" %}
    
      {{ content }}
 
