--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,50 +5,17 @@
 
 <body>
 
+    {% include main_nav.html %}
+
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-7 col-lg-offset-1">
               {{ content }}
             </div>
-
-            <div class="col-lg-4">
-                <!-- /well -->
-                <div class="well">
-                    <h4>Popular Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#dinosaurs">Dinosaurs</a>
-                                </li>
-                                <li><a href="#spaceships">Spaceships</a>
-                                </li>
-                                <li><a href="#fried-foods">Fried Foods</a>
-                                </li>
-                                <li><a href="#wild-animals">Wild Animals</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#alien-abductions">Alien Abductions</a>
-                                </li>
-                                <li><a href="#business-casual">Business Casual</a>
-                                </li>
-                                <li><a href="#robots">Robots</a>
-                                </li>
-                                <li><a href="#fireworks">Fireworks</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <!-- /well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Bootstrap's default wells work great for side widgets! What is a widget anyways...?</p>
-                </div>
-                <!-- /well -->
+            
+            <div class="col-lg-3 col-lg-offset-1">
+              {% include sidebar.html %}
             </div>
         </div>
 
@@ -57,7 +24,7 @@
     </div>
     <!-- /.container -->
 
-    {% include footer.html %}
+    {% include footer.html class="content" %}
 
 </body>
 
