--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,19 +4,23 @@
   {% include head.html %}
 
 <body>
+  
+    {% include main_nav.html %}
 
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-7 col-lg-offset-1">
 
                 <!-- the actual blog post: title/author/date/content -->
                 <h1>{{ page.title }}</h1>
-                <p class="lead">by <a href="#s"> {{ page.author }}</a>
+                <p class="lead">by {% if page.authorLink %}<a href="{{ page.authorLink }}">{% endif %} {{ page.author }}{% if page.authorLink %}</a>{% endif %}
                 </p>
                 <hr>
                 <p>
-                <span class="glyphicon glyphicon-time"></span> Posted on {{ page.date | date_to_rfc822 }}</p>
+                <span class="glyphicon glyphicon-time"></span> Posted on {{ page.date | date_to_long_string }}
+                <span class="pull-right"><b>Tags:</b> {{ page.tags | array_to_sentence_string }}</span>
+                </p>
                 <hr>
                 {% if page.image %}
                 <img src="{{ page.image }}" class="img-responsive">
@@ -29,58 +33,17 @@
                 
                 {{ content }}
 
-                <hr>
-
-                <!-- the comment box -->
-                <div class="well">
-                    <h4>Leave a Comment:</h4>
-                    <form role="form">
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
+                {{% if page.comments %}}
+                  <hr>
+                  <h3>Comments<h3>
+                  
+                  {% include disqus_thread.html %}
+                {% endif %}
 
             </div>
 
-            <div class="col-lg-4">
-                <!-- /well -->
-                <div class="well">
-                    <h4>Popular Blog Categories</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#dinosaurs">Dinosaurs</a>
-                                </li>
-                                <li><a href="#spaceships">Spaceships</a>
-                                </li>
-                                <li><a href="#fried-foods">Fried Foods</a>
-                                </li>
-                                <li><a href="#wild-animals">Wild Animals</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href="#alien-abductions">Alien Abductions</a>
-                                </li>
-                                <li><a href="#business-casual">Business Casual</a>
-                                </li>
-                                <li><a href="#robots">Robots</a>
-                                </li>
-                                <li><a href="#fireworks">Fireworks</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <!-- /well -->
-                <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Bootstrap's default wells work great for side widgets! What is a widget anyways...?</p>
-                </div>
-                <!-- /well -->
+            <div class="col-lg-3 col-lg-offset-1">
+              {% include sidebar.html %}
             </div>
         </div>
 
@@ -89,7 +52,7 @@
     </div>
     <!-- /.container -->
 
-    {% include footer.html %}
+    {% include footer.html class="content" %}
 
 </body>
 
