--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
                 
                 {{ content }}
 
-                {{% if page.comments %}}
+                {% if page.comments %}
                   <hr>
                   <h3>Comments<h3>
                   
