--- a/_includes/featured_posts.html
+++ b/_includes/featured_posts.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <h3>~Featured Blog Posts Here~</h3>
+                    <h2>Featured Blog Posts</h2>
                     <table class="table table-striped">
                         <tbody>
                         {% for post in site.posts %}
