--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -10,7 +10,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                            <img class="img-portfolio img-responsive" src="public/img/portfolio-1.jpg">
                         </a>
                         <h4>Student</h4>
                     </div>
@@ -18,7 +18,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                            <img class="img-portfolio img-responsive" src="public/img/portfolio-2.jpg">
                         </a>
                         <h4>Student</h4>
                     </div>
@@ -28,7 +28,7 @@
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                            <img class="img-portfolio img-responsive" src="public/img/portfolio-3.jpg">
                         </a>
                         <h4>Student</h4>
                     </div>
@@ -36,7 +36,7 @@
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
                         <a href="#">
-                            <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                            <img class="img-portfolio img-responsive" src="public/img/portfolio-4.jpg">
                         </a>
                         <h4>Student</h4>
                     </div>
