--- a/_includes/side_menu.html
+++ b/_includes/side_menu.html
@@ -2,7 +2,7 @@
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-        <li class="sidebar-brand"><a href="http://startbootstrap.com">WebLab Bootstrap</a>
+        <li class="sidebar-brand"><a href="#">WebLab Bootstrap</a>
         </li>
         <li><a href="#top">About</a>
         </li>
