cleaned up tags & categories. better linking and more content awareness

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
             <div class="row">
               <h4>Other Links</h4>
               <ul>
-                <li><a href="/categories.html">Categories</a></li>
-                <li><a href="/tags.html">Tags</a></li>
+                <li><a href="/categories">Categories</a></li>
+                <li><a href="/tags">Tags</a></li>
               </ul>
             </div>
             <div class="row">
