--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-1">
+            <div class="col-md-7 col-md-offset-1">
               {{ content }}
             </div>
             
-            <div class="col-lg-3 col-lg-offset-1">
+            <div class="col-md-3 col-md-offset-1">
               {% include sidebar.html %}
             </div>
         </div>
