--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-1">
+            <div class="col-md-7 col-md-offset-1">
 
                 <!-- the actual blog post: title/author/date/content -->
                 <h1>{{ page.title }}</h1>
@@ -42,7 +42,7 @@
 
             </div>
 
-            <div class="col-lg-3 col-lg-offset-1">
+            <div class="col-md-3 col-md-offset-1">
                 {% include sidebar.html %}
             </div>
         </div>
