--- a/_layouts/resources.html
+++ b/_layouts/resources.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
+            <div class="col-md-10 col-md-offset-1">
               {{ content }}
             </div>
         </div>
