updated / enabled links across the site

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -39,7 +39,7 @@
                 -->
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <a href="#"><i class="service-icon fa fa-users"></i></a>
+                        <a href="/students"><i class="service-icon fa fa-users"></i></a>
                         <h4>The Students</h4>
                         {% if include.extended %}
                         <p>We've been voted the best pencil sharpening service for 10 consecutive years. If you have a pencil that feels dull, we'll get it sharp!</p>
