--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,8 @@
               <ul>
                 <li><a href="/categories">Categories</a></li>
                 <li><a href="/tags">Tags</a></li>
+                <li><a href="/students">Students</a></li>
+                <li><a href="/instructors">Instructors</a></li>
               </ul>
             </div>
             <div class="row">
