closes #5 fixed copyright statement in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                         <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
                     </div>
                     <hr>
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright &copy; WebLab - <a href="http://www.frontrange.edu/">Front Range Community College</a> 2014</p>
                 </div>
             </div>
         </div>
