--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <footer class="{{ include.class }}">
         <div class="container">
-            <div class="row">
+            <div class="row col-md-3 col-md-offset-2">
               <h4>Other Links</h4>
               <ul>
                 <li><a href="/categories">Categories</a></li>
@@ -9,19 +9,16 @@
                 <li><a href="/instructors">Instructors</a></li>
               </ul>
             </div>
+            <div class="row col-md-3">
+              <h4>Course</h4>
+              <ul>
+                <li><a href="http://www.frontrange.edu/About-Us/Corporate-Solutions-and-Small-Business-Development/Corporate-Solutions/Web-Developer-Flyer.aspx">Course Flyer</a></li>
+                <li><a href="/course">Course Overview</a></li>
+                <li><a href="http://www.frontrange.edu/About-Us/Corporate-Solutions-and-Small-Business-Development/Corporate-Solutions/Web-Developer-Application.aspx">Application Form</a></li>
+              </ul>
+            </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <ul class="list-inline">
-                        <li><i class="fa fa-facebook fa-3x"></i>
-                        </li>
-                        <li><i class="fa fa-twitter fa-3x"></i>
-                        </li>
-                        <li><i class="fa fa-dribbble fa-3x"></i>
-                        </li>
-                    </ul>
-                    <div class="top-scroll">
-                        <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
-                    </div>
                     <hr>
                     <p>Copyright &copy; WebLab - <a href="http://www.frontrange.edu/">Front Range Community College</a> 2014</p>
                 </div>
