--- a/_includes/featured_posts.html
+++ b/_includes/featured_posts.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h2>Featured Blog Posts</h2>
-                    <table class="table table-striped">
+                    <table class="table table-bordered">
                         <tbody>
                         {% for post in site.posts %}
                         <tr>
@@ -15,7 +15,7 @@
                                     <small>
                                         {{ post.date | date: "%B %e, %Y" }} - {{ post.category }} -
                                         {% for tag in post.tags %}
-                                        <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
+                                        <a href="/tags/#{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
                                         {% if forloop.last != true %}
                                         {% endif %}
                                         {% endfor %} .
