updates to main nav

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -4,7 +4,7 @@
                 <div class="col-md-2 col-md-offset-2 text-center">
                     <div class="service-item">
                         <a href="/"><i class="service-icon fa fa-rocket"></i></a>
-                        <h4>Course Overview</h4>
+                        <h4>Latest</h4>
                         {% if include.extended %}
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                         {% endif %}
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-md-2 text-center">
                     <div class="service-item">
-                        <a href="#"><i class="service-icon fa fa-pencil"></i></a>
+                        <a href="/course"><i class="service-icon fa fa-pencil"></i></a>
                         <h4>Course Curriculum</h4>
                         {% if include.extended %}
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
