--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -2,17 +2,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
-                    <h2>Featured Portfolios</h2>
+                    <h2>Featured</h2>
                     <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2 text-center">
                     <div class="portfolio-item">
-                        <a href="#">
-                            <img class="img-portfolio img-responsive" src="public/img/portfolio-1.jpg">
+                        <a href="http://blog.frontrange.edu/2014/05/21/weblab-how-to-get-trained-and-hired-as-a-web-developer/">
+                            <img class="img-portfolio img-responsive" src="public/img/Ryan-Herman.png">
                         </a>
-                        <h4>Student</h4>
+                        <h4>Ryan Herman</h4>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
