customized homepage content and made the hamburger menu work

--- a/_includes/featured_posts.html
+++ b/_includes/featured_posts.html
@@ -1,4 +1,4 @@
-    <div class="call-to-action">
+    <div id="featured-posts" class="call-to-action">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
@@ -18,7 +18,7 @@
                                         <a href="/tags/#{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
                                         {% if forloop.last != true %}
                                         {% endif %}
-                                        {% endfor %} .
+                                        {% endfor %}
                                     </small>
                                 </p>
                             </td>
