--- a/_includes/side_menu.html
+++ b/_includes/side_menu.html
@@ -10,7 +10,7 @@
         </li>
         <li><a href="/students">Students</a>
         </li>
-        <li><a href="#blog">Blog</a></li>
+        <li><a href="#featured-posts">Blog</a></li>
     </ul>
 </div>
 
