--- a/students/spring2014/jcyoder/index.css
+++ b/students/spring2014/jcyoder/index.css
@@ -37,7 +37,7 @@ h1 {
 
 /* intro section */
 .intro {
-	width: 30%;
+	width: 35%;
 	/*margin: 20px;*/
 	float: left;
 /*	display: inline;*/
@@ -46,13 +46,13 @@ h1 {
 .intro h1 {
 	text-align: left;
 	margin-left: 30px;
-    min-width: 322px;
+    min-width: 430px;
 }
 
 /* image of janet */
 .intro .janet {
 	width: 216px;
-	display: block;
+	float: left;
 	height: auto;
 	margin: 20px 20px 15px 30px;
     border: 5px inset black;
@@ -62,14 +62,14 @@ h1 {
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 12pt;
 	margin-left: 30px;
-    min-width: 322px;
+    min-width: 430px;
    
 }
 
 .projects {
-	width:40%;
-    min-width: 415px;
-	margin: 20px 50px 20px 40px;
+	width:50%;
+    min-width: 300px;
+	margin: 10px 30px 20px 40px;
 	float: right;
 	display: inline;
 	height: auto;
@@ -95,7 +95,7 @@ h1 {
 	font-weight: normal;
 	font-size: 12pt;
 	font-family: Verdana, Geneva, sans-serif;
-	/*margin-bottom: 10px;*/
+	margin-right: 30px;
 }
 
 .listoflinks {
@@ -108,7 +108,7 @@ h1 {
 	display: inline
 }
 
-@media screen and (max-width: 827px) {
+@media screen and (max-width: 1037px) {
 	
 	.projects {
 		margin: 20px 20px 20px 30px;
