--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@
 
                 {% if page.comments %}
                   <hr>
-                  <h3>Comments<h3>
+                  <h3>Comments</h3>
                   
                   {% include disqus_thread.html %}
                 {% endif %}
