made site fork usable by making links more relative

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-md-2 col-md-offset-2 col-xs-5 col-xs-offset-1 text-center">
                     <div class="service-item">
-                        <a href="/students"><i class="service-icon fa fa-users"></i></a>
+                        <a href="{{ site.url }}/students"><i class="service-icon fa fa-users"></i></a>
                         <h4>The Students</h4>
                         {% if include.extended %}
                         <p>Graduates and future developers</p>
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-md-2 col-xs-5 text-center">
                     <div class="service-item">
-                        <a href="/resources"><i class="service-icon fa fa-cutlery"></i></a>
+                        <a href="{{ site.url }}/resources"><i class="service-icon fa fa-cutlery"></i></a>
                         <h4>Web Resources</h4>
                         {% if include.extended %}
                         <p>Free tutorials and tools </p>
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-md-2 col-md-offset-0 col-xs-5 col-xs-offset-1 text-center">
                     <div class="service-item">
-                        <a href="/"><i class="service-icon fa fa-rocket"></i></a>
+                        <a href="{{ site.url }}/"><i class="service-icon fa fa-rocket"></i></a>
                         <h4>Latest</h4>
                         {% if include.extended %}
                         <p>News and blog posts</p>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-2 col-xs-5 text-center">
                     <div class="service-item">
-                        <a href="/course"><i class="service-icon fa fa-list"></i></a>
+                        <a href="{{ site.url }}/course"><i class="service-icon fa fa-list"></i></a>
                         <h4>Course Curriculum</h4>
                         {% if include.extended %}
                         <p>What the course covers</p>
