made site fork usable by making links more relative

--- a/_includes/side_menu.html
+++ b/_includes/side_menu.html
@@ -4,11 +4,11 @@
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
         <li class="sidebar-brand"><a href="#">WebLab</a>
         </li>
-        <li><a href="/course">Curriculum</a>
+        <li><a href="{{ site.url }}/students">Students</a>
         </li>
-        <li><a href="/resources">Resources</a>
+        <li><a href="{{ site.url }}/resources">Web Resources</a>
         </li>
-        <li><a href="/students">Students</a>
+        <li><a href="{{ site.url }}/course">Curriculum</a>
         </li>
         <li><a href="#featured-posts">Blog</a></li>
     </ul>
