--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -19,7 +19,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col-md-2 col-md-offset-0 col-xs-5 col-xs-offset-1text-center">
+                <div class="col-md-2 col-md-offset-0 col-xs-5 col-xs-offset-1 text-center">
                     <div class="service-item">
                         <a href="{{ site.url }}/course"><i class="service-icon fa fa-list"></i></a>
                         <h4>Course Curriculum</h4>
