made site fork usable by making links more relative

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
             <div class="col-sm-3 col-sm-offset-3">
               <h4>Other Links</h4>
               <ul>
-                <li><a href="/categories">Categories</a></li>
-                <li><a href="/tags">Tags</a></li>
-                <li><a href="/students">Students</a></li>
-                <li><a href="/instructors">Instructors</a></li>
+                <li><a href="{{ site.url }}/categories">Categories</a></li>
+                <li><a href="{{ site.url }}/tags">Tags</a></li>
+                <li><a href="{{ site.url }}/students">Students</a></li>
+                <li><a href="{{ site.url }}/instructors">Instructors</a></li>
               </ul>
             </div>
             <div class="col-sm-3 col-sm-offset-1">
